# Rust-Frontend-Poc

user_manager_frontend/: .env  Cargo.toml  README.MD  index.html  netlify.toml  package-lock.json  tailwind.config.js  tailwind.css
user_manager_frontend/src/: app.rs  components-old.rs  components.rs  main.rs  user_manager.rs
user_manager_frontend/src/helpers/: user_manager.rs
user_manager_frontend/src/pages/: article.rs  home.rs  login.rs  mod.rs
