[package]
name = "rust_typing_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
dotenv = "0.15"
implicit-clone = "0.5"
indexmap = "2.7"
