[package]
name = "yew_user_example"
version = "0.1.0"
edition = "2021"

[dependencies]
# For å bruke Renderer::<App>::new().render(), trenger vi feature "csr"
yew = { version = "0.21.0", features = ["csr"] }

# For å kunne kalle spawn_local, trenger vi wasm-bindgen-futures
wasm-bindgen-futures = "0.4"

# Ellers som før
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3.0"
yew-router = "0.18.0"
web-sys = "0.3.76"
gloo-storage = "0.3.0"
gloo-net = "0.6"
